# meno

./: .coveragerc  .gitignore  CHANGELOG.md  CLAUDE.md  COMPLETION_SUMMARY.md  IMPLEMENTED_FEATURES.md  INTEGRATED_COMPONENTS_SUMMARY.md  LICENSE  LIGHTWEIGHT_MODELS_DOCUMENTATION.md  MANIFEST.in  MIGRATION_GUIDE.md  Mark fork  README.md  ROADMAP.md  VERSION_1_0_CLEANUP.md  VERSION_1_0_RELEASE_SUMMARY.md  VERSION_NOTES.md  pyproject.toml  requirements_insurance_example.txt  requirements_test.txt  setup.py
config/: default_config.yaml  insurance_config.yaml  workflow_config.yaml
docs/: bertopic_integration.md  lightweight_models.md  offline_usage.md  web_interface.md
examples/: README.md  auto_topic_detection.py  basic_workflow.ipynb  bertopic_custom_pipeline.py  bertopic_example.py  bertopic_integration_notebook.ipynb  consistent_api_demo.py  cpu_only_example.py  feedback_visualization_example.py  feedback_visualization_notebook.ipynb  generate_enhanced_report.py  generate_sample_report.py  huggingface_test.py  insurance_topic_modeling.py  insurance_topic_modeling_local.py  integrated_components_example.py  interactive_feedback_example.py  interactive_workflow_demo.py  lightweight_models_visualization.py  local_model_example.py  minimal_sample.py  minimal_test.py  raw_data_sample.py  simple_bertopic_example.py  simple_integrated_demo.py  simple_workflow_test.py  streaming_with_team_config.py  team_config_bertopic_example.py  team_config_example.py  time_and_space_demo.py  topic_feedback_notebook.ipynb  v1_api_example.py  web_interface_example.py  web_lightweight_example.py  workflow_bertopic_example.py  workflow_with_optimizations.py
examples/sample_reports/demo/: index.html  report_with_full_data.html  report_with_sampled_data.html
examples/sample_reports/enhanced/: README.md  comprehensive_report.html  index.html  modeler_enhanced_report.html  sample_documents.csv  similarity_focused_report.html  wordcloud_focused_report.html
meno/: __init__.py  api_standardization.md  meno.py  web_interface.py  workflow.py
meno/active_learning/: __init__.py  cleanlab_wrapper.py  simple_feedback.py
meno/cli/: __init__.py  team_config_cli.py  web_interface_cli.py
meno/modeling/: __init__.py  base.py  bertopic_model.py  bertopic_optimizer.py  direct_tests.py  embeddings.py  streaming_processor.py  supervised.py  test_api_standardization.py  top2vec_model.py  unified_topic_modeling.py  unsupervised.py
meno/modeling/simple_models/: __init__.py  lightweight_models.py
meno/preprocessing/: acronyms.py  spelling.py
meno/reporting/: __init__.py  html_generator.py
meno/utils/: config.py  team_config.py
meno/visualization/: __init__.py  bertopic_viz.py  geospatial.py  lightweight_viz.py  time_series.py  time_space.py  umap_viz.py
meno/visualization/enhanced_viz/: __init__.py  comparative_viz.py  feedback_viz.py  interactive_viz.py
output/: minimal_acronyms.html  minimal_misspellings.html
scripts/: test_and_publish.sh
tests/: README.md  conftest.py  test_bertopic_model.py  test_bertopic_optimizer.py  test_bertopic_visualization.py  test_config.py  test_config_functional.py  test_cpu_embedding.py  test_embedding_functional.py  test_integration.py  test_integration_functional.py  test_lightweight_models.py  test_lightweight_viz.py  test_local_model_loading.py  test_mmap_storage.py  test_modeling.py  test_polars_streaming.py  test_preprocessing.py  test_streaming_processor.py  test_team_config.py  test_top2vec_model.py  test_unified_topic_modeling.py  test_visualization.py  test_visualizations_extended.py  test_web_interface.py  test_workflow.py
tmp/extract/meno/: __init__.py
tmp/extract/meno-0.2.0.dist-info/: METADATA  RECORD
tmp/extract/meno/modeling/: embeddings.py
tmp/extract/meno/preprocessing/: __init__.py  acronyms.py  normalization.py
tmp/extract/meno/reporting/: html_generator.py
tmp/extract/meno/utils/: __init__.py  config.py
tmp/extract/meno/visualization/: interactive_plots.py  static_plots.py  umap_viz.py
tools/: download_insurance_dataset.py
venv_py312/: pyvenv.cfg
