[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meno"
version = "0.2.0"
description = "Topic modeling toolkit for messy text data"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "gensim>=4.3.0",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
    "transformers>=4.28.0",
    "umap-learn>=0.5.3",
    "spacy>=3.5.0",
    "scikit-learn>=1.2.0",
    "plotly>=5.14.0",
    "cleanlab>=2.3.0",
    "jinja2>=3.1.2",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "sentence-transformers>=2.2.2",
    "hdbscan>=0.8.29",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.20.9",  # For faster fuzzy matching
    "polars>=0.17.0",  # For large dataset optimization
]

[project.optional-dependencies]
dev = [
    "black>=23.3.0",
    "ruff>=0.0.265",
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "jupyter>=1.0.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "mypy>=1.3.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/meno"
"Bug Tracker" = "https://github.com/yourusername/meno/issues"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "B", "I", "UP", "N", "C4", "SIM", "ARG"]
ignore = ["E501"]  # Let black handle line length

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=meno --cov-report=term-missing --cov-report=xml:coverage.xml --cov-branch"

[tool.setuptools]
packages = [
    "meno",
    "meno.active_learning",
    "meno.modeling",
    "meno.preprocessing",
    "meno.reporting",
    "meno.utils",
    "meno.visualization"
]
package-dir = {"" = "."}
include-package-data = true